<resources>
    <string name="app_name">嘴角</string>
    <string name="current_version_code">2.3</string>
    <string name="welcome_word">发现最美的味道</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="wizard_text1_head">最美的味道</string>
    <string name="wizard_text1_note">这里全是最真实的吃货推荐</string>
    <string name="wizard_text2_head">靠谱的推荐</string>
    <string name="wizard_text2_note">这里全是真是的吃货推荐</string>
    <string name="wizard_text3_head">一大波的吃货</string>
    <string name="wizard_text3_note">与一帮出色的吃货分享味蕾的快乐</string>
    <string name="wizard_btn_text">马上体验</string>
    <string name="drawer_setting1">反馈</string>
    <string name="drawer_setting2">关于</string>
    <string name="drawer_setting3">退出</string>
    <string name="login_text">发现最美的味道</string>
    <string name="login_weichat">微信登录</string>
    <string name="login_weibo">微博登录</string>
    <string name="login_qq">QQ登录</string>
    <string name="main_page">嘴角精选</string>
    <string name="recommend_page">我推荐的</string>
    <string name="favor_page">我喜欢的</string>
    <string name="msg_page">消息</string>
    <string name="feed_back">反馈</string>
    <string name="concerning">关于</string>
    <string name="concerning_text1">发 现 最 美 的 味 道</string>
    <string name="concerning_text2">嘴      角</string>
    <string name="user_protocol">用户协议</string>
    <string name="protocol_url">http://mobile.views.zuijiao.net/zuijiao/agreement</string>
    <string name="team_url">http://mobile.views.zuijiao.net/zuijiao/team</string>
    <string name="feed_back_url">http://mobile.views.zuijiao.net/zuijiao/feedback?device=%1$s&amp;token=%2$s</string>
    <string name="share_url">http://mobile.views.zuijiao.net/zuijiao/share/cuisine</string>
    <string name="zuijiao_team">嘴角团队</string>
    <string name="wizard_page">欢迎页</string>
    <string name="version_code">V%s</string>
    <string name="logout_confirm_title">是否退出登录</string>
    <string name="logout">退出登录</string>
    <string name="logout_msg">已经退出登录</string>
    <string name="none_favor">我一向是很有品位的\n暂时还没有喜欢的食物</string>
    <string name="personal_tip">私房</string>
    <string name="notify_net">网络不给力，请下拉刷新重试</string>
    <string name="list_header_hint_normal">下拉刷新</string>
    <string name="list_header_hint_ready">松开刷新数据</string>
    <string name="list_header_hint_loading">正在加载...</string>
    <string name="list_header_last_time">上次更新时间：</string>
    <string name="list_footer_hint_normal">查看更多</string>
    <string name="list_footer_hint_ready">松开载入更多</string>
    <string name="msg_login_wait_dialog">正在登录</string>
    <string name="email">电子邮箱</string>
    <string name="honey_name">用户名</string>
    <string name="password">密码</string>
    <string name="password_confirm">密码确认</string>
    <string name="notify_register">还没有嘴角账号？点击注册</string>
    <string name="notify_register_part">还没有嘴角账号，点击注册</string>
    <string name="third_party_login">第三方账号登录</string>
    <string name="weibo">微博</string>
    <string name="weixin">微信</string>
    <string name="weixin_friend">微信好友</string>
    <string name="weixin_friend_circle">微信朋友圈</string>
    <string name="qq">QQ</string>
    <string name="qq_friend">QQ好友</string>
    <string name="qq_space">QQ空间</string>
    <string name="login">登录</string>
    <string name="confirm">确定</string>
    <string name="loading">加载中...</string>
    <string name="login_deny">取消授权</string>
    <string name="login_cancel">取消登录</string>
    <string name="login_error">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="like_with_num">喜欢(%s)</string>
    <string name="comment_with_num">评论(%s)</string>
    <string name="notify_unlogin">还没有登录，不可以乱戳哦！</string>
    <string name="goto_login">火速去登录</string>
    <string name="favor_feedback">谢谢喜欢</string>
    <string name="favor_label">%s人喜欢</string>
    <string name="comment_hint">写下你的评论</string>
    <string name="notify_net2">请检查你的网络</string>
    <string name="notify_net3">无法同步设置，请检查你的网络</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="beforeyesterday">前天</string>
    <string name="format_location">店铺：%s</string>
    <string name="format_price">单价：￥%s</string>
    <string name="format_favor_person">喜欢 (%s人)</string>
    <string name="format_comment">评论 (%s条)</string>
    <string name="none_person_like">暂时还没有人喜欢</string>
    <string name="none_comment">暂时还没有人评论</string>
    <string name="reply_to">回复%s</string>
    <string name="reply_success">回复成功</string>
    <string name="reply_failed">回复失败</string>
    <string name="comment_success">评论成功</string>
    <string name="comment_failed">评论失败</string>
    <string name="notify_empty_comment">写点什么吧!</string>
    <string name="on_loading">正在加载...</string>
    <string name="on_uploading">正在上传...</string>
    <string name="reply_content">回复%s</string>
    <string name="remove_favor">取消喜欢</string>
    <string name="format_time">%s天前</string>
    <string name="format_create_time">推荐于%s</string>
    <string name="notify_empty_email">请输入正确的邮箱地址</string>
    <string name="notify_empty_password">请输入密码</string>
    <string name="none_msg">暂时还没有消息 ！</string>
    <string name="register_error_email">邮箱地址不能为空 ！</string>
    <string name="register_error_email_format">请输入正确的邮箱地址</string>
    <string name="register_error_name">请输入用户名</string>
    <string name="register_error_pwd">请输入密码</string>
    <string name="register_error_pwd_imsame">两次输入的密码不一致</string>
    <string name="register_error_pwd_type">密码格式不对，请重新输入！</string>
    <string name="no_more">没有更多了</string>
    <string name="update_hint">新的版本来了！</string>
    <string name="update_ok">更新</string>
    <string name="dialog_no">放弃</string>
    <string name="unknown_location">未知</string>
    <string name="error_password">账号或者密码错误</string>
    <string name="image_chooser">选择照片</string>
    <string name="error_upload">上传出错，请重试。</string>
    <string name="error_read_file">文件读取出错</string>
    <string name="no_favor">我一向很有品位的\n暂时还没有我喜欢的美食</string>
    <string name="no_follow">我是独行侠\n暂时还没有关注任何人</string>
    <string name="no_fans">我很低调\n暂时还没有粉丝</string>
    <string name="no_recommendation">我一直都很矜持\n暂时没有向小伙伴们推荐美食</string>
    <string name="no_message">暂时还没有消息</string>
    <string name="current_position">目前支持城市·上海</string>
    <string name="register">注册</string>
    <string name="cancel">取消</string>
    <string name="favor_count">共喜欢了%d份美食</string>
    <string name="recommend_count_title">共推荐了%d份美食</string>
    <string name="recommendation_count"> %d份推荐</string>
    <string name="splite_dot">·</string>
    <string name="month_day">%1$02d月%2$02d日</string>
    <string name="year_month_day">%1$4d年%2$d月%3$d日</string>
    <string name="notify_delete_comment">是否删除评论</string>
    <string name="delete">删除</string>
    <string name="fail_delete_comment">删除失败</string>
    <string name="success_delete_comment">删除成功</string>
    <string name="base_info">基本信息</string>
    <string name="crazy_experience">疯狂吃货经历</string>
    <string name="flavor_hobby">口味嗜好</string>
    <string name="no_base_info">我很害羞，没有留下任何信息</string>
    <string name="no_experience">我只是一名低调的吃货，懒得写介绍</string>
    <string name="no_hobby">我不挑食，给口吃的就行</string>
    <string name="recommend_count">%d&#160;&#160;&#160;推荐</string>
    <string name="favorite_count">%d&#160;&#160;&#160;喜欢</string>
    <string name="follow_count">%d&#160;&#160;&#160;关注</string>
    <string name="fans_count">%d&#160;&#160;&#160;粉丝</string>
    <string name="follow">关注</string>
    <string name="followed">已关注</string>
    <string name="followed_each">互相关注</string>
    <string name="un_follow">取消关注</string>
    <string name="friend">好友</string>
    <string name="favor">喜欢</string>
    <string name="recommend">推荐</string>
    <string name="edit_info">编辑资料</string>
    <string name="default_user_name">Jordan</string>
    <string name="nick_name">昵称</string>
    <string name="gender">性别</string>
    <string name="birthday">出生年月</string>
    <string name="residence">现居地</string>
    <string name="add">添加</string>
    <string name="taste_tag_default_name">标签</string>
    <string name="save">保存</string>
    <string name="save_error_check_network">保存失败，请检查你的网络</string>
    <string name="nick_name_null">昵称不能为空</string>
    <string name="nick_name_hint">输入新的昵称</string>
    <string name="introduction_hint">你的个人介绍</string>
    <string name="nick_name_watcher">%1$d&#160;&#160;/&#160;&#160;%2$d</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="confidential">保密</string>
    <string name="on_location">正在给你定位...</string>
    <string name="current_location">现居地</string>
    <string name="personal_gourmet">私房美食</string>
    <string name="store_gourmet">小店美食</string>
    <string name="edit_store_gourmet">编辑小店美食</string>
    <string name="edit_personal_gourmet">编辑个人美食</string>
    <string name="edit_description_hint">给好吃的东西写点什么吧</string>
    <string name="gourmet_label">美味标签</string>
    <string name="shanghai">上海</string>
    <string name="where_to_eat">在哪里可以吃到</string>
    <string name="how_much">价格是多少？</string>
    <string name="gourmet_name">美食名称</string>
    <string name="add_gourmet">添加美食</string>
    <string name="share">分享</string>
    <string name="refresh">刷新</string>
    <string name="edit_gourmet">编辑美食</string>
    <string name="delete_gourmet">删除美食</string>
    <string name="hot_labels">热门标签</string>
    <string name="sure_with_num">确定(%1$d/%2$d)</string>
    <string name="label">标签</string>
    <string name="label_editor_hint">输入标签内容，以标记美食的与众不同</string>
    <string name="notify_delete_label">是否删除标签</string>
    <string name="label_count_upper_limit">最多5个标签</string>
    <string name="label_repeated">所加的标签已经存在</string>
    <string name="notify_discard_edit_label">是否放弃已经编辑的标签？</string>
    <string name="edit_location_hint">输入店名或地点</string>
    <string name="for_you_locations">为你搜到如下地点</string>
    <string name="create_new_location">创建新地点</string>
    <string name="select">选择</string>
    <string name="setting">设置</string>
    <string name="message_push">消息推送</string>
    <string name="sb_follow_me">有人关注了我</string>
    <string name="sb_favor_my_recommend">有人喜欢了我推荐的美食</string>
    <string name="sb_comment_me">有人评论了我</string>
    <string name="login_account">登录账号</string>
    <string name="un_setting">未设置</string>
    <string name="notify_cannot_modify_email">已绑定邮箱不可修改</string>
    <string name="personal_introduction">个人介绍</string>
    <string name="contact_way">联系方式</string>
    <string name="telephone">电话</string>
    <string name="mobile_phone">手机</string>
    <string name="industry">从事行业</string>
    <string name="industry_hint">输入从事行业</string>
    <string name="detail_info">详细</string>
    <string name="show_all_banquet">查看全部料理</string>
    <string name="interest_hobby">兴趣爱好</string>
    <string name="interest_hobby_hint">输入兴趣爱好</string>
    <string name="education">所受教育</string>
    <string name="education_hint">输入所受教育</string>
    <string name="language">语言</string>
    <string name="input_email">输入邮箱</string>
    <string name="send_verification_code">获取验证码</string>
    <string name="re_send_verification_code">重新获取</string>
    <string name="re_send_verification_code_delayed">%d秒后重新获取</string>
    <string name="input_telephone">输入手机号</string>
    <string name="input_verification_num">输入验证码(4位)</string>
    <string name="my_language">擅长语言</string>
    <string name="notification">通知</string>
    <string name="comment">评论</string>
    <string name="notification_with_count">通知&#160;&#160;&#160;&#160;(%s)</string>
    <string name="comment_with_count">评论&#160;&#160;&#160;&#160;(%s)</string>
    <string name="already_read">已阅</string>
    <string name="label_count">%d个标签</string>
    <string name="image_count_upper_limit">最多%d张图片</string>
    <string name="honey_name1">昵称</string>
    <string name="alert">提示</string>
</resources>