<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    android:orientation="vertical">

    <include
        android:id="@+id/register_toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="10dip"
        android:orientation="vertical">

        <com.zuijiao.view.RoundImageView
            android:layout_height="60dip"
            android:scaleType="centerInside"
            android:layout_width="60dip"
            android:elevation="5dip"
            android:id="@+id/register_add_head"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:src="@drawable/person_count" />

        <LinearLayout
            android:layout_marginTop="10dip"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <com.zuijiao.view.MyEditText
                android:id="@+id/et_regist_name"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginRight="10dip"
                android:drawableBottom="@drawable/single_line"
                android:hint="@string/honey_name1"
                android:singleLine="true"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/register_male_btn"
                android:background="@drawable/register_male_bg"
                android:text="@string/male"
                android:textSize="15sp"
                android:textColor="@color/bg_light_gray"
                android:layout_marginRight="10dip"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_height="30dip"
                android:layout_width="30dip" />

            <Button
                android:id="@+id/register_female_btn"
                android:background="@drawable/register_female_bg"
                android:text="@string/female"
                android:textColor="@color/bg_light_gray"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginRight="10dip"
                android:layout_gravity="center_vertical"
                android:layout_height="30dip"
                android:layout_width="30dip" />
        </LinearLayout>


        <com.zuijiao.view.MyEditText
            android:id="@+id/et_regist_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:drawableBottom="@drawable/single_line"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/black" />

        <com.zuijiao.view.MyEditText
            android:id="@+id/et_regist_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:drawableBottom="@drawable/single_line"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black" />

        <com.zuijiao.view.MyEditText
            android:id="@+id/et_regist_password_comfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:drawableBottom="@drawable/single_line"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>