<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/setting_toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/message_push"
        android:textSize="18sp"
        android:textColor="@color/tv_deep_gray"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip" />

    <View
        android:layout_height="1dip"
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@color/bg_light_gray" />

    <LinearLayout
        android:paddingRight="20dip"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="20dip"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_weight="1"
            android:paddingLeft="5dip"
            android:textColor="@color/tv_deep_gray"
            android:text="@string/sb_follow_me" />

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/setting_sb_follow_me"
            style="@style/MaterialDesignSwitchButtonStyle"
            android:layout_gravity="center_vertical|right" />

    </LinearLayout>

    <View
        android:layout_height="1dip"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@color/bg_gray_white" />

    <LinearLayout
        android:paddingRight="20dip"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="20dip"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_weight="1"
            android:paddingLeft="5dip"
            android:textColor="@color/tv_deep_gray"
            android:text="@string/sb_favor_my_recommend" />

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/setting_sb_favor_me"
            style="@style/MaterialDesignSwitchButtonStyle"
            android:layout_gravity="center_vertical|right" />

    </LinearLayout>

    <View
        android:layout_height="1dip"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@color/bg_gray_white" />

    <LinearLayout
        android:paddingRight="20dip"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="20dip"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_weight="1"
            android:paddingLeft="5dip"
            android:textColor="@color/tv_deep_gray"
            android:text="@string/sb_comment_me" />

        <com.kyleduo.switchbutton.SwitchButton
            android:background="@color/transparent"
            android:id="@+id/setting_sb_comment_me"
            style="@style/MaterialDesignSwitchButtonStyle"
            android:layout_gravity="center_vertical|right" />

    </LinearLayout>

    <View
        android:layout_height="1dip"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@color/bg_gray_white" />

    <TextView
        android:textSize="18sp"
        android:textColor="@color/tv_deep_gray"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/login_account"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="30dip" />

    <View
        android:layout_height="1dip"
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@color/bg_light_gray" />

    <LinearLayout
        android:id="@+id/setting_account_layout"
        android:paddingRight="20dip"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="20dip"
        android:paddingBottom="20dip"
        android:paddingTop="20dip"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_weight="1"
            android:paddingLeft="5dip"
            android:textColor="@color/tv_deep_gray"
            android:text="@string/email" />

        <TextView
            android:id="@+id/setting_current_account"
            android:text="@string/un_setting"
            android:textSize="15sp"
            android:textColor="@color/tv_light_gray"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical|right" />

    </LinearLayout>

    <View
        android:layout_height="1dip"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@color/bg_gray_white" />

    <Button
        android:id="@+id/setting_logout_btn"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/logout"
        android:textSize="17sp"
        android:layout_marginTop="40dip"
        android:textColor="@color/white" />
</LinearLayout>