<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/logout_dialog_bg"
    android:orientation="vertical"
    android:paddingTop="20dip"
    android:paddingLeft="20dip"
    android:paddingRight="20dip"
    android:paddingBottom="10dip">

    <TextView
        android:id="@+id/logout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="提示"
        android:textColor="#373737"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/logout_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logout_title"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20dip"
        android:text="@string/logout_confirm_title"
        android:textColor="#888888"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/logout_btn_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="#373737"
            android:textSize="16sp" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/logout_btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/confirm"
            android:textColor="#cccc0000"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>