<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.zuijiao.android.zuijiao.EditUserInfoActivity"
    android:layout_height="match_parent">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:text="@string/nick_name"
        android:textSize="18sp"
        android:textColor="@color/tv_light_gray"
        android:gravity="left"
        android:padding="16dip" />

    <View
        android:layout_height="1dip"
        android:layout_width="match_parent"
        android:background="@color/bg_light_gray" />

    <EditText
        android:layout_marginTop="20dip"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:layout_marginBottom="10dip"
        android:maxLength="15"
        android:hint="@string/nick_name_hint"
        android:textColor="@color/tv_deep_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_nick_name_input"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="1/15"
        android:id="@+id/tv_et_watcher"
        android:textColor="@color/tv_light_gray"
        android:layout_marginRight="16dip"
        android:textSize="15sp" />

    <Button
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_marginTop="30dip"
        android:elevation="3dip"
        android:background="@color/white"
        android:text="@string/save"
        android:textColor="@color/tv_deep_gray"
        android:id="@+id/btn_nick_name_commit" />
</LinearLayout>